packages/reference/client/scss/65_scopes/algolia_instantsearch/_ais-SearchBox.scss
.ais-SearchBox {
  &__root {
    width: 100%;
  }

  &__wrapper {
    display: flex;
  }


  &__input, &__submit {
    border: 1px solid $border-default;
    background-color: white;
    height: 3rem;
  }

  &__input {
    flex-grow: 1;
    border-right: none;
    border-radius: 6px 0 0 6px;
    color: $text-dark;
    font-size: 1em;
    font-weight: 500;
    padding: 0 $global-spacing-unit-small;

    &:focus {
      outline: none;
    }
  }

  &__submit {
    border-left: none;
    border-radius:  0 6px 6px 0;
    background-image: url('/static/magnifying-glass.svg');
    background-repeat: no-repeat;
    background-position: center;
    width: 40px;
    cursor: pointer;

    // Don't show the default magnifying glass icon
    svg {
      display: none;
    }
  }

  // Don't show the reset button
  &__reset {
    display: none;
  }
}

